/***********************************
It would be great to have a running
log of changes other than github 
commit messages. Please add the most 
recent ones on top, along with the 
date uploaded to the github
***********************************/

10/29 - Teresa and Robin
-commented code finally…
-removed extraneous fields
-renamed levels
-made a file for crediting levels in the level folder

gameManager.js
-changed button sizes to be a little more dynamic
-levels now load in based on number


10/27 -Robin
changes:
-cleaned up character.js
-hardcoded in 3 demo levels

10/21 -Robin 
changes:
-Target collection now works fully!
-changed makeTarget to include both a target number, and the target we’re on as parameters
-make target now calls makeCollectable()if appropriate
-update seems like the most logical for handling proper target collection

character.js
-function move now just moves the character

gameManager.js
-new function pitcheck()
	-//returns true if both characters are not moving into pits
-new function sameSpaceCheck()	
	-//returns true if both characters are not moving into the same space
-new function targetBlockedCheck() 
	-//returns false if either character tries to move into a target they are not allowed to collect